--- a/swiftlint.yml
+++ b/swiftlint.yml
@@ -1,71 +1,86 @@
-# Disable rules from default list.
 disabled_rules:
-  # Lines should not have trailing whitespace.
   - trailing_whitespace
-
-  # Colons should be next to the identifier when specifying a type and next to the key in dictionary literals.
   - colon
-
-  # Type bodies should not span too many lines.
   - type_body_length
-
-  # Case statements should vertically align with their enclosing switch statement, or indented if configured otherwise.
-  - switch_case_alignment
-
-  # An object should only remove itself as an observer in deinit.
   - notification_center_detachment
+  
 
-# Enable rules not from default list.
 opt_in_rules:
-  # Delegate protocols should be class-only so they can be weakly referenced.
+  - anyobject_protocol
+  - array_init
+  - block_based_kvo
   - class_delegate_protocol
-
-  # Closure bodies should not span too many lines.
+  - closing_brace
   - closure_body_length
-
-  # Prefer checking isEmpty over comparing count to zero.
+  - closure_end_indentation
+  - closure_spacing
+  - collection_alignment
+  - conditional_returns_on_newline
+  - contains_over_filter_count
+  - contains_over_filter_is_empty
+  - contains_over_first_not_nil
+  - contains_over_range_nil_comparison
+  - convenience_type
+  - compiler_protocol_init
+  - custom_rules
+  - discouraged_optional_boolean
+  - discouraged_object_literal
+  - duplicate_imports
+  - empty_collection_literal
   - empty_count
-
-  # Prefer checking isEmpty over comparing string to an empty string literal.
   - empty_string
-
-  # Prefer using .first(where:) over .filter { }.first in collections.
-  - first_where
-
-  # Prefer using .last(where:) over .filter { }.last in collections.
-  - last_where
-
-  # Force unwrapping should be avoided.
-  - force_unwrapping
-
-  # IBOutlets should be private to avoid leaking UIKit to higher layers.
-  - private_outlet
-
-  # IBActions should be private.
-  - private_action
-
-  # Prefer someBool.toggle() over someBool = !someBool.
-  - toggle_bool
-
-  # Fallthrough should be avoided.
+  - empty_xctest_method
+  - explicit_init
+  - explicit_self
   - fallthrough
-
-  # Arguments should be either on the same line, or one per line.
+  - fatal_error_message
+  - first_where
+  - flatmap_over_map_reduce
+  - force_unwrapping
+  - identical_operands
+  - implicitly_unwrapped_optional
+  - joined_default_parameter
+  - last_where
+  - legacy_multiple
+  - legacy_random
+  - literal_expression_end_indentation
+  - lower_acl_than_parent
   - multiline_arguments
-
-  # Multiline arguments should have their surrounding brackets in a new line.
-  - multiline_arguments_brackets
-
-  # Chained function calls should be either on the same line, or one per line.
   - multiline_function_chains
-
-  # Multiline literals should have their surrounding brackets in a new line.
   - multiline_literal_brackets
-
-  # Functions and methods parameters should be either on the same line, or one per line.
   - multiline_parameters
+  - nimble_operator
+  - nslocalizedstring_key
+  - number_separator
+  - object_literal
+  - operator_usage_whitespace
+  - overridden_super_call
+  - override_in_extension
+  - pattern_matching_keywords
+  - private_action
+  - private_outlet
+  - prefer_zero_over_explicit_init
+  - prohibited_super_call
+  - prohibited_interface_builder
+  - quick_discouraged_call
+  - quick_discouraged_focused_test
+  - quick_discouraged_pending_test
+  - reduce_into
+  - redundant_nil_coalescing
+  - redundant_type_annotation
+  - required_enum_case
+  - single_test_class
+  - sorted_first_last
+  - static_operator
+  - strong_iboutlet
+  - toggle_bool
+  - unneeded_parentheses_in_closure_argument
+  - unused_declaration
+  - unused_import
+  - vertical_parameter_alignment_on_call
+  - vertical_whitespace_closing_braces
+  - xct_specific_matcher
 
-# Paths to ignore during linting. Takes precedence over `included`.
 excluded:
   - Carthage
   - Pods
@@ -75,12 +90,10 @@ excluded:
   - Source/UI/Extensions/UIFont+extension.swift
   - Source/Resources/R.generated.swift
 
-# Force rules.
 force_cast: warning
 force_unwrapping: warning
 force_try: warning
 
-# Length rules.
 function_body_length:
   warning: 50
   error: 100
@@ -95,7 +108,6 @@ closure_body_length:
   warning: 10
   error: 30
 
-# Naming rules. Additionally they can set excluded names
 type_name:
   min_length: 1
   max_length: 40
@@ -103,12 +115,24 @@ type_name:
 identifier_name:
   min_length: 1
   max_length: 40
-
-#Other rules.
-warning_threshold: 20
-
+  
+large_tuple:
+  warning: 3
+  error: 5
+  
+function_parameter_count:
+  warning: 8
+  error: 10
+  
 cyclomatic_complexity:
-  warning: 15
+  warning: 8
   error: 20
+  
+nesting:
+  type_level:
+    warning: 4
+    error: 8
+
+warning_threshold: 20
 
 reporter: "xcode"
